--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Working hours</title>
 	<link rel="shortcut icon" type="image/png" href="http://www.sclance.com/cliparts/time-png/time-png_8433.png"/>
+	<meta name="robots" content="noindex">
+	
 	
 	<script>
 		Date.prototype.subtractDays = function(days) {
