--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 	<title>Working hours</title>
-	<link rel="shortcut icon" type="image/png" href="http://www.sclance.com/cliparts/time-png/time-png_8433.png"/>
+	<link rel="shortcut icon" type="image/png" href="https://www.sclance.com/cliparts/time-png/time-png_8433.png"/>
 	<meta name="robots" content="noindex">
-	
 	
 	<script>
 		Date.prototype.subtractDays = function(days) {
@@ -532,7 +531,7 @@
 <div id="ex1" class="modal" id="fade" style="font-size: 80%; max-width: 90%;">
 	<h2>Info</h2>
 	<p>
-		Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a>
+		Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a><br>
 		Version: 20190919.1
 	</p>
 	<p>If you delete your browser data the history will reset.</p>
