store external resources locally

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Working hours</title>
-	<link rel="shortcut icon" type="image/png" href="https://www.sclance.com/cliparts/time-png/time-png_8433.png"/>
+	<link rel="shortcut icon" type="image/png" href="images/time-png_favicon.png"/>
 	<meta name="robots" content="noindex">
 	
 	<script>
