--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Working hours</title>
-	<link rel="shortcut icon" type="image/png" href="images/time-png_favicon.png"/>
+	<link rel="shortcut icon" type="image/png" href="https://www.sclance.com/cliparts/time-png/time-png_8433.png"/>
 	<meta name="robots" content="noindex">
 	
 	<script>
@@ -455,20 +455,6 @@
 		.selected{
 			background: red;
 		}
-		@media screen and (max-width: 700px) {
-			.column {
-				width: 95%;
-				-moz-border-radius: unset !important;
-				-webkit-border-radius: unset !important;
-			}
-			input,select,textarea, #history {
-				margin: 1%;
-			}
-			#history {
-				float: right;
-				max-width: 80%; 
-			}
-		}	
 		.switch {
 		  position: relative;
 		  display: inline-block;
@@ -524,6 +510,20 @@
 		.slider.round:before {
 		  border-radius: 50%;
 		}
+		@media screen and (max-width: 700px) {
+			.column {
+				width: 95%;
+				-moz-border-radius: unset !important;
+				-webkit-border-radius: unset !important;
+			}
+			input,select,textarea, #history {
+				margin: 1%;
+			}
+			#history {
+				float: right;
+				max-width: 80%; 
+			}
+		}	
 	</style>
 </head>
 <body onload="reset(); add_time(7.6);">
