--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Working hours</title>
 	<link rel="shortcut icon" type="image/png" href="https://www.sclance.com/cliparts/time-png/time-png_8433.png"/>
 	<meta name="robots" content="noindex">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<script>
 		Date.prototype.subtractDays = function(days) {
@@ -510,7 +511,7 @@
 		.slider.round:before {
 		  border-radius: 50%;
 		}
-		@media screen and (max-width: 700px) {
+		@media only screen and (max-width: 700px) {
 			.column {
 				width: 95%;
 				-moz-border-radius: unset !important;
