--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
 			font-weight: bolder; 
 			padding: 4px; 
 			background-color: white;
-			max-width: 50%; 
+			max-width: 50%;
+			min-width: 220px;
 			height: 180px;
 			overflow-y: scroll;
 		}
@@ -522,7 +523,7 @@
 			}
 			#history {
 				float: right;
-				max-width: 80%; 
+				width: 120%;
 			}
 		}	
 	</style>
