added pageview count

--- a/index.html
+++ b/index.html
@@ -534,7 +534,9 @@
 	<h2>Info</h2>
 	<p>
 		Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a><br>
-		Version: 20190919.1
+		Version: 20190919.1 <br>
+		Pageview count: <img src="http://hitwebcounter.com/counter/counter.php?page=7138684&style=0024&nbdigits=5&type=page&initCount=0" title="Pageview counter" Alt="Pageview counter" border="0" > 
+                            
 	</p>
 	<p>If you delete your browser data the history will reset.</p>
 	<p>Hitting "ENTER" will add 7.6 hours to the end date (and break time if defined).</p>
