--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
 <div id="ex1" class="modal" style="font-size: 80%; max-width: 90%;">
 	<h2>Info</h2>
 	<p>
-		Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a><br>
-		Version: 20190930.2 <br>
+		Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
+		Version: 20191003.1 <br>
 		Pageview count: <img src="https://hitwebcounter.com/counter/counter.php?page=7138684&style=0024&nbdigits=5&type=page&initCount=0" title="Pageview counter" Alt="Pageview counter" border="0" >             
 	</p>
 	<p>
@@ -275,14 +275,14 @@
 <div style="top: 0; left: 0; width:100%; height:100%; display: table; position: absolute;">
 	<div align="center" style=" max-width: 50%; display: table-cell; vertical-align: middle; margin: 0 5px;">
 		<div class="column" id="column1" style="">
-			<p>Start time : <input name="start_time" id="start_time" type="time" onkeypress="return runScript(event)" onchange="getTotal();"/></p>
+			<p>Start time : <input name="start_time" id="start_time" type="time" onchange="getTotal();"/></p>
 			<p>Break : <input name="break_time" id="break_time" type="time" value="00:00" onchange="getTotal();" /></p>
 			<p>Time to go home : <input name="end_time" id="end_time" type="time" onchange="getTotal();" /></p>
 			<p>Total hours (no break) : <input type="time" name="totalnobreak" id="totalnobreak" value="" readonly> <input type="text" name="totalnobreakdec" id="totalnobreakdec" value="" maxlength="4" size="5" readonly></p>
 			<p>Recup@
 				<select name="hourschedule" id="hourschedule" onchange="getTotal();">
-				  <option value="7.6" selected="selected">7,6h</option>
-				  <option value="8">8h</option>
+					<option value="7.6">7,6h</option>
+					<option value="8">8h</option>
 				</select>
 				: <input type="text" name="recup" id="recup" value="" maxlength="4" size="5" readonly> <input type="text" name="recupdec" id="recupdec" value="" maxlength="4" size="5" readonly></p>
 			<p>Total hours : <input type="time" name="total" id="total" value="" readonly> <input type="text" name="totaldec" id="totaldec" value="" maxlength="4" size="5" readonly></p>
@@ -525,11 +525,14 @@
 			nosave = localStorage.getItem("nosave"),
 			hourschedule = localStorage.getItem("hourschedule"),
 			startmin5 = localStorage.getItem("startmin5");
+
 		if ( autoend == "true" )
 			document.getElementById("autoend").checked = true;
 		if ( nosave == todayDate() )
 			document.getElementById("nosave").checked = true;
-		document.getElementById("hourschedule").value = hourschedule;
+		document.getElementById("hourschedule").value = "7.6";
+		if ( hourschedule)
+			document.getElementById("hourschedule").value = hourschedule;
 		
 		if ( startmin5 == "true" ) {
 			document.getElementById("startmin5").checked = true;
@@ -583,12 +586,18 @@
 		getTotal();
 	}
 
-	function runScript(event) {
+	/*function keypress(event) {
 		if (event.keyCode == 13) {
 			add_time(7.6);
 			getTotal();
 		}
-	}
+	}*/
+	
+	$( document ).on( 'keydown', function ( e ) {
+      if ( e.keyCode === 13 ) { //ENTER key code
+		add_time(7.6);
+      }
+    });
 
 	function exportHistory() {		
 		var _myArray = JSON.stringify(localStorage , null, 4); //indentation in json format, human readable
