--- a/index.html
+++ b/index.html
@@ -275,8 +275,13 @@
 <div style="top: 0; left: 0; width:100%; height:100%; display: table; position: absolute;">
 	<div align="center" style="max-width: 50%; display: table-cell; vertical-align: middle; margin: 0 5px;">
 		<p>
-			<div style="width:15%; float: left; text-align: right; padding: 2% 1% 2% 2%; font-size: 60%;">Notification:</div> 
-			<div style="width:75%; float: right; text-align: left; padding: 2% 1% 2% 2%; font-size: 60%;">Spread the word!!!<br>I've implemented a new way to store time data in the background. As a result having a field with all the recup added together into 1 value might be an option.</div> 
+			<div style="width:15%; float: left; text-align: right; padding: 2% 1% 1% 2%; font-size: 60%;">Notification:</div> 
+			<div style="width:75%; float: right; text-align: left; padding: 2% 1% 1% 2%; font-size: 60%;">
+				Spread the word!!!<br>
+				I've implemented a new way to store time data in the background.<br>
+				As a result having a field with all the recup added together into 1 value might be an option.<br>
+				Please notify my if you encounter any bugs.
+				</div> 
 		</p>
 		<div class="column" id="column1" style="">
 			<p>Start time : <input name="start_time" id="start_time" type="time" onchange="calculateTotal();"/></p>
