--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
 		If you delete your browser data the history will reset. You can export and import your data.<br>
 		<a class="modalbutton floatreset" id="exportHistory" onclick="exportHistory()">Export History</a>
 		<a class="modalbutton floatreset" id="importHistory">Import History</a>
+		<a class="modalbutton floatreset" id="deleteHistory" onclick="deleteHistory()">Delete History</a>
 		<input type="file" id="importFile" accept=".json" style="display:none"/>	
 	</p>
 	<p>Hitting "ENTER" will add the time corresponding to the selected value next to 'Recup' to the end date (and break time if defined).</p>
@@ -526,7 +527,7 @@
 		  return `${parts[2]}-${parts[1]}-${parts[0]}`;
 		};
 		
-		var entry = "<span style='float: left; width:40%; text-align: left;'>Date</span><span style='width: 30%;'>Time (no break)</span><span style='width: 30%; float: right;'>Recup</span><br>",
+		var entry = "<span style='float: left; text-align: left;'>Date</span><span style=''>Time (no break)</span><span style='width: 30%; float: right;'>Recup</span><br>",
 			keys = Object.keys(localStorage),
 			revkeys = keys.map(reverseDateRepresentation).sort().reverse().map(reverseDateRepresentation),
 			recuptotal = 0,
@@ -540,7 +541,7 @@
 				// Temporary functionality to parse json and non-json time values
 				try {
 					var timeinfo = JSON.parse(localStorage.getItem(key));
-					entry = entry + "<span class='' style='float:left; width:40%; text-align: left;'>" + key + "</span><span style='width: 30%;'>" + timeinfo['TotalNoBreakDec'] + "</span><span style='width: 30%; float: right;'>" + timeinfo['RecupDec'] + "</span><br>";
+					entry = entry + "<span class='' style='float:left; text-align: left;'>" + key + "</span><span style=''>" + timeinfo['TotalNoBreakDec'] + "</span><span style='width: 30%; float: right;'>" + timeinfo['RecupDec'] + "</span><br>";
 					recuptotal = recuptotal + parseFloat(timeinfo['RecupDec']);
 				} catch (e) {
 					//entry = entry + "<span class='' style='float:left;'>" + key + "</span><span style='width: 30%; float: right;'>" + localStorage.getItem(key) + "</span><br>";
@@ -561,13 +562,55 @@
 	function cleanLocalStorage() {
 		var today = makeDate(todayDate());
 		for(key in localStorage) {
-			//alert(today.subtractDays(0));
-			//alert(makeDate(key));
 			if ( makeDate(key) < today.subtractDays(getHistoryRetain()) ) // days to keep data excluding today
 				delete localStorage[key];
 		}
 	}
 
+	function deleteHistory() {
+		const userKeyRegExp = /^[0-9]{2}-[0-9]{2}-[0-9]{4}/;
+		if ( confirm("Are you sure you wish to delete your history?") ) {
+			for(key in localStorage) {
+				if ( userKeyRegExp.test(key) ) {
+					delete localStorage[key];
+				}
+			}
+			setHistory();
+			document.getElementById("modalclosebutton").click();
+			alert("History deleted!");
+		}
+	}
+
+	function exportHistory() {		
+		var _myArray = JSON.stringify(localStorage , null, 4); //indentation in json format, human readable
+
+		var vLink = document.getElementById('exportHistory'),
+		vBlob = new Blob([_myArray], {type: "octet/stream"}),
+		vName = 'working_history_' + todayDate() + '.json',
+		vUrl = window.URL.createObjectURL(vBlob);
+		vLink.setAttribute('href', vUrl);
+		vLink.setAttribute('download', vName );
+	}
+		
+	var importHistory = document.getElementById('importHistory'),
+		importFile = document.getElementById('importFile');
+	importFile.addEventListener("change", importHistoryData, false);
+	importHistory.onclick = function () {importFile.click()}
+	function importHistoryData(e) {
+		var files = e.target.files, reader = new FileReader();
+		reader.onload = readerEvent => {
+			var content = JSON.parse(readerEvent.target.result); // this is the content!
+			Object.keys(content).forEach(function (k) {
+				localStorage.setItem(k, content[k]);
+			});
+			importFile.value = ''; //clear input value after every import
+			setHistory();
+		}
+		reader.readAsText(files[0]);
+		document.getElementById("modalclosebutton").click();
+		alert("Import successful!");
+	}
+	
 	function makeDate(date){
 	   var parts = date.split("-");
 	   return new Date(parts[2], parts[1] - 1, parts[0]);
@@ -678,38 +721,6 @@
 			document.getElementById("modalclosebutton").click();
 		}
     });
-
-	function exportHistory() {		
-		var _myArray = JSON.stringify(localStorage , null, 4); //indentation in json format, human readable
-
-		var vLink = document.getElementById('exportHistory'),
-		vBlob = new Blob([_myArray], {type: "octet/stream"}),
-		vName = 'working_history_' + todayDate() + '.json',
-		vUrl = window.URL.createObjectURL(vBlob);
-		vLink.setAttribute('href', vUrl);
-		vLink.setAttribute('download', vName );
-	}
-		
-	var importHistory = document.getElementById('importHistory'),
-		importFile = document.getElementById('importFile');
-	importFile.addEventListener("change", importHistoryData, false);
-	importHistory.onclick = function () {importFile.click()}
-	function importHistoryData(e) {
-		var files = e.target.files, reader = new FileReader();
-		//reader.onload = _imp();
-		//reader.readAsText(file,'UTF-8');
-		reader.onload = readerEvent => {
-			var content = JSON.parse(readerEvent.target.result); // this is the content!
-			Object.keys(content).forEach(function (k) {
-				localStorage.setItem(k, content[k]);
-			});
-			importFile.value = ''; //clear input value after every import
-			setHistory();
-		}
-		reader.readAsText(files[0]);
-		//importFile.click();
-		alert("Import successful!");
-	}
 
 	window.onbeforeunload = function(e) {
 		// Set 'dont save today' and 'automatically set end time' parameters in local storage
